# TAA

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: devops.md  tester.md
.github/workflows/: ci.yml
apps/accounts/: admin.py  apps.py  constants.py  exceptions.py  hashing.py  language.py  models.py  selectors.py  services.py
apps/accounts/migrations/: 0001_initial.py  0002_entrepreneurprofile.py  0003_alter_profile_enums.py
apps/accounts/tests/: conftest.py  factories.py  test_factories.py  test_hashing.py  test_language.py  test_models.py  test_profile.py  test_profile_enums.py  test_selectors.py  test_services.py
apps/bot/: admin.py  apps.py  dispatcher.py  exceptions.py  logging_filter.py  models.py  rate_limit.py  telegram.py  templates.py  urls.py  views.py
apps/bot/handlers/: callback.py  commands.py  constants.py  help.py  start.py  text.py  voice.py
apps/bot/tests/: test_dispatcher.py  test_handler_voice.py  test_help.py  test_logging_filter.py  test_rate_limit.py  (+5 more)
apps/core/: admin.py  apps.py  exceptions.py  models.py  views.py
apps/corpus/: apps.py  embeddings.py  exceptions.py  fixtures.py  models.py
apps/rag/: __init__.py  admin.py  apps.py  exceptions.py  models.py  prompts.py  selectors.py  services.py
apps/voice/: admin.py  apps.py  exceptions.py  gemini.py  models.py  providers.py
docs/: architecture.md  epics.md  prd.md  product-brief.md  project-context.md
taa/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+20 files in other folders)
